@@ -69,7 +69,8 @@ S3method("as.dendrogram", igraph.eigenc)
 
 # conversion
 
-export(get.adjacency, get.edgelist, as.directed, as.undirected)
+export(get.adjacency, get.edgelist, as.directed, as.undirected,
+       get.adjlist, get.adjedgelist)
 
 # fitting, other
 
