@@ -1,3 +1,9 @@
+2007-10-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/conversion.R (get.adjlist, get.adjedgelist)
+	* interfaces/R/src/rinterface.c.in (R_igraph_get_adjlist)
+	(R_igraph_get_adjedgelist) : added
+
 2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/flow.R (graph.mincut)
